<resources>
    <string name="app_name">EcoConexion</string>

    <!--    String primera pantalla-->
    <string name="eco">Eco</string>
    <string name="conexion">Conexión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="bienvenido_eco_conexion">Bienvenido a EcoConexión</string>
    <string name="eco_planeador">Eco Planeador</string>


    <!--  String  de los botones -->
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>


    <!-- String formulario de registro -->
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre_usuario">Nombre de Usuario:</string>
    <string name="correo_electronico">Correo electrónico:</string>
    <string name="password">Contraseña:</string>
    <string name="numero_celular">Número de celular:</string>
    <string name="direccion">Dirección:</string>
    <string name="o_registrate_con">O registrate con</string>

    <!-- String descripciones -->
    <string name="facebook_button_description">Botón de Facebook</string>
    <string name="google_button_description">Botón de Google</string>
    <string name="mac_button_description">Botón de Mac</string>
    <string name="ya_tienes_cuenta">¿Ya tienes una cuenta? Inicia sesion ahora</string>
    <string name="aun_no_te_has_registrado">¿Aún no te has registrado? Crear una cuenta</string>
    <string name="efecto_blur">Efecto blur</string>
    <string name="amleia_renatata">Amelia Renata</string>
    <string name="eco_info">Eco Info</string>

    <!-- String de la pantalla de tablero -->
    <string name="reciclaje">Reciclaje</string>
    <string name="puntos">Puntos</string>
    <string name="premios">Premios</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="eco_conexion">Eco Conexión</string>


</resources>