<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_bg7" />

    <ImageView
        android:id="@+id/ImgBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-140dp"
        android:foregroundGravity="center_horizontal|fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blur" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/verde_oscuro"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-9dp"
        android:text="@string/bienvenido_eco_conexion"
        android:textColor="@color/verde_oscuro"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <!-- Aqui creamos los campos del formulario-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="42dp">

        <LinearLayout
            android:id="@+id/Formulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="26dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:background="@drawable/rounded_green_border"
                android:ems="10"
                android:hint="@string/correo_electronico"
                android:padding="12dp"
                android:textColorHint="@color/verde_oscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contraseña2" />

            <EditText
                android:id="@+id/contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:background="@drawable/rounded_green_border"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="@color/verde_oscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BtnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:clipToPadding="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/ingresar2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@color/verde_oscuro"
                android:padding="11dp"
                android:text="@string/ingresar"
                android:textColor="@color/verde_claro"
                android:textSize="20sp"
                app:fontWeight="700"
                app:strokeColor="@color/verde_claro"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="442dp"
                android:onClick="tablero"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Línea o elemento a la izquierda -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/verde_oscuro" />

            <!-- Texto central -->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/o_registrate_con"
                android:textColor="@color/verde_claro"
                android:textStyle="bold" />

            <!-- Línea o elemento a la derecha -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/verde_oscuro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.90"
            tools:layout_editor_absoluteY="525dp">

            <ImageButton
                android:id="@+id/btnFacebook2"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_button_background"
                android:contentDescription="@string/facebook_button_description"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BtnRegistrar"
                app:srcCompat="@drawable/facebook1" />

            <ImageButton
                android:id="@+id/btnGoogle2"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button_background"
                android:contentDescription="google_button_description"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BtnRegistrar"
                app:srcCompat="@drawable/google1" />

            <ImageButton
                android:id="@+id/btnMac2"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_button_background"
                android:contentDescription="@string/mac_button_description"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BtnRegistrar"
                app:srcCompat="@drawable/manzana1" />
        </LinearLayout>

        <Button
            android:id="@+id/yaTienesCuenta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="20dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="crearNuevaCuenta"
            android:text="@string/aun_no_te_has_registrado"
            android:textColor="@color/verde_oscuro"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>