<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".TableroActivity">

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/contenedor_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headerTextBienvenida"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/row_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#00023316"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/icon_tablero_rowback" />

            <TextView
                android:id="@+id/bienvenido_a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bienvenido_a"
                android:textColor="@color/verde_oscuro"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eco_conexion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/eco_conexion"
                android:textColor="@color/verde_oscuro"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/alert"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_tablero_campana" />

        </LinearLayout>

        <Space
            android:id="@+id/space_uno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />

        <LinearLayout
            android:id="@+id/card_retos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_border_superior"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Texto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="9dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/texto_reto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    android:layout_weight="1"
                    android:text="¿Aceptas el reto de los 30 días para un menor consumo de energía?"
                    android:textColor="@color/verde_oscuro"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imagen_reto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.6"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_robot1" />
            </LinearLayout>

            <Button
                android:id="@+id/boton_aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/verde_oscuro"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="Aceptar"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Space
            android:id="@+id/space_dos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />

        <LinearLayout
            android:id="@+id/iconos_puntos_reciclaje_premios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title">

            <ImageView
                android:id="@+id/iv_puntos"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/icon_tablero_puntos"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/verde_oscuro" />

            <ImageView
                android:id="@+id/iv_reciclaje"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@drawable/icon_tablero_reciclaje"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/verde_oscuro" />

            <ImageView
                android:id="@+id/iv_premios"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@drawable/icon_tablero_premios"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <Space
            android:id="@+id/space_tres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/text_puntos_reciclaje_premios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="-13dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="50dp">

            <TextView
                android:id="@+id/iv_puntos"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/puntos"
                android:textColor="@color/verde_oscuro"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/iv_reciclaje"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/reciclaje"
                android:textColor="@color/verde_oscuro"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/iv_premios"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/premios"
                android:textColor="@color/verde_oscuro"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/contenedor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle"
        app:layout_constraintVertical_bias="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="330dp">

            <ImageButton
                android:id="@+id/caneca1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_tablero_caneca" />

            <ImageButton
                android:id="@+id/gota_agua1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_tablero_gotaagua" />

            <ImageButton
                android:id="@+id/bonbillo2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_tablero_bonbillo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/planeta1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_tablero_planeta" />

            <ImageButton
                android:id="@+id/industria1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_tablero_industria" />

            <ImageButton
                android:id="@+id/casa1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_tablero_casa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>